# NextDNS-Dashboard

./: .gitignore  Dockerfile  app.py  docker-compose.yml  docker-requirements.txt  pyproject.toml  replit.md
.streamlit/: config.toml  docker-config.toml
attached_assets/: Pasted-Hier-ist-ein-detaillierter-und-professioneller-Prompt-d_1768559297407.txt
