[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "psycopg2-binary>=2.9.11",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
    "streamlit>=1.53.0",
]
